syntax="proto2";
package raft;

enum OpType
{
    OpWrite = 0;
    OpDelete = 1;
};

message Command
{
    required OpType op = 1;
    required bytes key = 2;
    required bytes val = 3;
};

message ServerId
{
   required bytes ip = 1;
   required int32 port = 2; 
};